# server-duels

./: README.md  get_dependencies.sh  pyproject.toml  server-duels-package.deb
.github/: pull_request_template.md
scripts/: bot_token.json  env-setup.sh  env_setup.sh  generate_installer.sh  get_dependencies.sh  package_installer.sh  post_install_template.sh  pre_install_template.sh  pre_remove_template.sh
server-duels/: server-duels.py
server-duels-package/DEBIAN/: control
src/: sample.py
tests/: sampletest.py
